log
Wed 27 Mar 2024 05:08:33 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8bcd2eb
Wed 27 Mar 2024 05:10:48 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/70
b875a2f
Wed 27 Mar 2024 05:14:01 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d01c533
Wed 27 Mar 2024 05:15:26 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
301ca36
Wed 27 Mar 2024 05:16:04 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb83137
Wed 27 Mar 2024 05:16:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
15c643c
Wed 27 Mar 2024 05:17:48 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
645c896
Wed 27 Mar 2024 05:19:44 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
0fccf41
Wed 27 Mar 2024 05:20:33 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
ea4aea4
Fri 29 Mar 2024 12:45:03 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  9|3
total_score: 35/70
ee4b229
Fri 29 Mar 2024 12:49:44 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
cbbc7e1
Fri 29 Mar 2024 12:50:16 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
6cf3789
Fri 29 Mar 2024 12:50:40 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d55dbee
Fri 29 Mar 2024 12:51:41 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
e0748f6
Fri 29 Mar 2024 12:52:58 PM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
71a3474
Fri 29 Mar 2024 12:58:31 PM UTC: 
 list.c | 27 ++++++++++++++-------------
 1 file changed, 14 insertions(+), 13 deletions(-)
test.c: In function ‘pushFront’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:144:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  144 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:135:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  135 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:108:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
  108 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
32b0735
Fri 29 Mar 2024 01:00:31 PM UTC: 
 list.c | 20 +++-----------------
 1 file changed, 3 insertions(+), 17 deletions(-)
 tests:  10|2
total_score: 45/70
a6d509c
Fri 29 Mar 2024 01:00:41 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
063d230
Fri 29 Mar 2024 01:01:12 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  10|2
total_score: 45/70
ed5b39c
Fri 29 Mar 2024 01:01:38 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
04a12f8
Fri 29 Mar 2024 01:01:53 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
0f66005
Fri 29 Mar 2024 01:02:35 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
fb13b7e
Fri 29 Mar 2024 01:03:01 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|2
total_score: 45/70
15ec784
Fri 29 Mar 2024 01:03:21 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
ee17355
Fri 29 Mar 2024 01:04:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d280c75
Fri 29 Mar 2024 01:04:20 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  10|2
total_score: 45/70
7eccc8b
Fri 29 Mar 2024 01:04:38 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
63a20f3
